# cmake_third_party

./: .gitignore  CMakeLists.txt  README.md  hello.cc
proto/: CMakeLists.txt  FindProto.cmake  hello.proto  world.proto
thrift/: CMakeLists.txt  demo.thrift
